Mu/test/mu_2/varval.mu
var a: 7
val b: "a string"
print a
print b
print a := 8
//print a := "a string"   // error
//print b := ""			// error

/* initialize with Type */
var x: String
typeof x
var y: Int
typeof y
print x := "Hello"

// y := "World"	// error
print "x = " & x
// print "y = " & y // error
// cannot initialize with assignment
// var z := "Hello"	// error
